Fixed scrolling, now will operate like normal website on mobile

--- a/frontend/css/global.css
+++ b/frontend/css/global.css
@@ -8,15 +8,9 @@ html {
 }
 
 body {
-  overflow: hidden;
-  height: 100%;
   width: 100%;
-  position: fixed;
 }
 
 #__next {
-  height: 100%;
   width: 100%;
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
 }
